fix WRAl close  button fail on mobile due to css collision

--- a/rb/static/widget/css/newwidget.css
+++ b/rb/static/widget/css/newwidget.css
@@ -817,8 +817,14 @@ div.ant div.ant_close       {
   width:25px; height: 15px;
   text-align: center;
   font-weight: bold;
-  position:absolute;top:10px;right:2px;color:#d8d8d8;cursor:pointer;font-size:11px;
+  position:absolute;
+  top:10px;
+  right:2px;
+  color:#d8d8d8;
+  cursor:pointer;
+  font-size:11px;
   display:none;
+  z-index:1000;
 }
 
 body.ant_touch_browser div.ant div.ant_close {
